[tool.poetry]
name = "mpls-l3vpn-eveng"
version = "0.1.0"
description = "Ansible to provision Juniper network"
authors = ["Calvin Remsburg <cremsburg.dev@gmail.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.8"
ansible = "^5.1.0"
junos-eznc = "^2.6.3"
jxmlease = "^1.0.3"
xmltodict = "^0.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
